# 0xoLemon-Launcher

./: .depot-upload.pid  .gitignore  CLOUDREDIRECT_COMPLETE.md  CLOUDREDIRECT_INTEGRATION.md  DEBUG_INSTRUCTIONS.md  LUMACORE_UPDATE_SUMMARY.md  PLAN.md  QUICK_TEST_GUIDE.md  README.md  README_FIX.txt  STEAM_AND_GAME_TAGS_README.md  UploadGameTool.py  VALIDATION_REPORT.txt  all_patches.txt  append_jobs.py  build-and-push.ps1  build_out.txt  capture-errors.cjs  check_get_content.py  commit_lfs.ndjson  du_an.md  eslint.config.js  extract_codex.py  extract_funcs.py  extract_funcs_exact.py  extracted.json  extracted_all_input.txt  extracted_code.txt  fetch_sgdb.mjs  final_funcs.rs  find_job_rs.py  firestore.rules  fix_ui.js  hf_debug.txt  index.html  job.rs.recovered  lfs_req.json  manifest.json  migrate-dl-folder.ps1  missing.rs  (+40 more)
native/overlay/: CMakeLists.txt  README.md
native/overlay/build32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  minhook.vcxproj  minhook.vcxproj.filters  overlay.vcxproj  overlay.vcxproj.filters
native/overlay/build32/Release/: minhook.lib
native/overlay/build32/Win32/Release/ALL_BUILD/: ALL_BUILD.recipe
native/overlay/build32/Win32/Release/ZERO_CHECK/: ZERO_CHECK.recipe
native/overlay/build32/overlay.dir/Release/: overlay32.dll.recipe
native/overlay/build64/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  minhook.vcxproj  minhook.vcxproj.filters  overlay.vcxproj  overlay.vcxproj.filters
native/overlay/build64/Release/: minhook.lib
native/overlay/build64/minhook.dir/Release/: minhook.lib.recipe
native/overlay/build64/overlay.dir/Release/: overlay64.dll.recipe
native/overlay/src/: dllmain.cpp  overlay_core.cpp  overlay_core.h  test_game.cpp
native/overlay/src/hooks/: dxgi_hook.cpp  dxgi_hook.h  steam_hook.cpp  steam_hook.h
native/overlay/src/input/: input_hook.cpp  input_hook.h
native/overlay/src/ipc/: pipe_client.cpp  pipe_client.h  shared_memory.cpp  shared_memory.h
native/overlay/src/renderer/: dx11_renderer.cpp  dx11_renderer.h
native/steam_hook_backup/: CMakeLists.txt  INSTALL.md  README.md  build.bat  example_game.lua  test_status.ps1  uninstall.ps1
native/steam_hook_backup/core/: CMakeLists.txt  entry.cpp  entry_simple.cpp  lua_loader.cpp  lua_loader.h  pattern_scanner.cpp  pattern_scanner.h  patterns.h  steam_types.h
native/steam_hook_backup/core/hooks/: package_hooks.cpp  package_hooks.h
native/steam_hook_backup/proxy/: CMakeLists.txt  dwmapi_proxy.cpp  dwmapi_proxy.def  xinput_proxy.cpp  xinput_proxy.def
src/: App.css  (+19 more)
src-tauri/: Cargo.toml  README_CHUNK_STORAGE_FIX.md  README_LAUNCH_OPTIONS.md  SHORTCUT_GAME_FOLDER_FIX.md  build.rs  game-tags.json  huggingface-repos.json  src-tauri.rar  tauri.conf.json  test.rs
src-tauri/assets/: catalog-among-us.0xo  catalog.0xo
src-tauri/assets/games/007-first-light/: achievements.0xo  audio.0xo  core.0xo
src-tauri/assets/games/among-us/: achievements.0xo  audio.0xo  core.0xo  media.0xo
src-tauri/assets/games/geometry-dash/: core.0xo
src-tauri/assets/games/hello-kitty-island-adventure/: core.0xo
src-tauri/assets/games/meccha-chameleon/: achievements.0xo
src-tauri/assets/games/octopath-traveler-0/: achievements.0xo
src-tauri/assets/games/persona-5-royal/: achievements.0xo  core.0xo
src-tauri/assets/games/solo-leveling-arise-overdrive/: core.0xo
src-tauri/backup/: FIX_DOWNLOAD_RESUME_JOURNAL_UPDATES.md  README_MULTI_HF_REPOS.md  README_UPDATE_STATE_FIX.md  launch.example.json  sign-test.txt  tauri.conf.json
src-tauri/backup/assets/games/among-us/: core.0xo
src-tauri/backup/assets/games/ea-sports-fc-26/: achievements.0xo  core.0xo
src-tauri/backup/assets/games/geometry-dash/: achievements.0xo
src-tauri/backup/assets/games/hello-kitty-island-adventure/: audio.0xo
src-tauri/backup/assets/games/meccha-chameleon/: core.0xo
src-tauri/backup/assets/games/microsoft-flight-simulator-2020-40th-anniversary-edition/: core.0xo  media.0xo
src-tauri/backup/assets/games/octopath-traveler-0/: core.0xo
src-tauri/backup/assets/games/solo-leveling-arise-overdrive/: achievements.0xo
src-tauri/backup/assets/games/stellar-blade/: audio.0xo
src-tauri/backup/assets/games/tom-clancy-s-splinter-cell-blacklist/: audio.0xo  launch.json
src-tauri/backup/icons/: icon.icns
src-tauri/backup/src/: README_REMOTE_MAPPING.md  asset_pack.rs  cloud_save.rs  depot_crypto.rs  download_paths.rs  launch.rs  lib.rs  notifications.rs  platform.rs  scanner.rs  security.rs  steam_integration.rs
src-tauri/backup/src/asset_pack/: keys.rs  model.rs
src-tauri/backup/src/job/: direct.rs  progress.rs
src-tauri/backup/src/tools/: search_geometry_dash_hf_issue.ps1  split_backend_job.py
src-tauri/capabilities/: default.json
src-tauri/permissions/: allow-all.json
src-tauri/src/: README_GEOMETRY_DASH_PLAY_FIX.md  README_SPLIT_FIXED.md  achievement_watcher.rs  asset_cache.rs  asset_pack.rs  builder.rs  chat.rs  cloud_save.rs  debug_log.rs  defender_exclusion.rs  delete_test.rs  depot_crypto.rs  discord_auth.rs  download_paths.rs  game_tags.rs  hubcap_keys.json  job.rs  job.rs.backup-20260709-091927  job.rs.bak  keys.json  launch.rs  lib.rs  main.rs  manifest.rs  notifications.rs  offline_cache.rs  overlay_injector.rs  platform.rs  process_manager.rs  remote_paths.rs  scanner.rs  secret_store.rs  slash_test.rs  src.rar  steam.rs  steam_integration.rs  steamless.rs  storage.rs  translations.rs  updater.rs
src-tauri/src/asset_pack/: generic_source.rs  model.rs
src-tauri/src/cloud_redirect/: crypto.rs  downloader.rs  file_util.rs  mod.rs  patcher.rs  pe.rs  signatures.rs  steam_detector.rs
src-tauri/src/cloud_redirect_v2/: dll_manager.rs  mod.rs  oauth.rs  provider_config.rs
src-tauri/src/cloud_save/: google_drive.rs
src-tauri/src/job/: dependencies.rs  direct.rs  direct.rs.backup-20260709-091935  paths.rs  paths.rs.backup-20260709-091941  progress.rs
src-tauri/src/tools/: apply_backend_job_split.ps1  restore_backend_job_backup.ps1
(+825 files in other folders)
