[package]
name = "first-light-smart-launcher"
version = "1.0.0"
description = "Steam-like chunk launcher for 007 First Light"
authors = ["007 Launcher"]
edition = "2021"
default-run = "0xoLemon"

[lib]
name = "first_light_launcher"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "0xoLemon"
path = "src/main.rs"

[[bin]]
name = "depot_builder"
path = "src/bin/depot_builder.rs"

[[bin]]
name = "asset_pack_builder"
path = "src/bin/asset_pack_builder.rs"

[[bin]]
name = "injector_cli"
path = "src/bin/injector_cli.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
base64 = "0.22.1"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
blake3 = "1.8.2"
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "5.0"
urlencoding = "2.1"
ed25519-dalek = "3.0.0-rc.0"
fastcdc = "4.0.1"
fs2 = "0.4.3"
hex = "0.4.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
regex = "1.12.4"
reqwest = { version = "0.12.24", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-dialog = "2.4.1"
tauri-plugin-opener = "2.5.2"
tauri-plugin-updater = "2.10.1"
thiserror = "2.0.17"
url = "2.5.7"
walkdir = "2.5.0"
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }
zstd = "0.13.3"
tauri-plugin-notification = "2.3.3"
image = { version = "0.25.10", features = ["webp"] }
# CloudRedirect / STFixer dependencies
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
md-5 = "0.10"
flate2 = "1"
winreg = "0.52"
sevenz-rust = { version = "0.6.1", features = ["aes256"] }
winapi = { version = "0.3.9", features = ["minwindef", "errhandlingapi", "handleapi", "libloaderapi", "memoryapi", "processthreadsapi", "synchapi", "sysinfoapi", "winbase", "winnt"] }
tauri-plugin-global-shortcut = "~2.0.0"
once_cell = "1.21.4"
lazy_static = "1.5"
tauri-plugin-localhost = "2.3.2"
tauri-plugin-fs = "2.5.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
